--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
 
 :root {
     --color-light: #EEEEEE;
@@ -46,7 +41,7 @@ h3 {
 
 a {
     text-decoration: none;
-    color: var(--color-light);
+    color: var(--color-middle);
 }
 
 /* -- */
@@ -69,10 +64,32 @@ a {
 
 .nav-link {
     width: 25%;
-    margin-right: 40px;
-    padding: 0 50px;
+    justify-content: space-between;
+    padding: 0 30px;
     font-size: var(--fs-body);
+    transition: border 0s linear 100ms;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    transform-origin: bottom;
 }
+
+.nav-link:hover {
+    border: 3px solid var(--color-accent);
+    animation-name: bounce;
+    animation-timing-function: ease;
+}
+
+@keyframes bounce {
+    0%   { 
+        transform: translateY(0); 
+    }
+    50%  { 
+        transform: translateY(-10px); 
+    }
+    100% { 
+        transform: translateY(0); 
+    }
+  }
 
 .logo {
     padding: 20px;
@@ -91,7 +108,7 @@ a {
     float: left;
 }
 
-.about-me {
+.about {
     display: flex;
     justify-content: center;
     padding-top: 30px;
@@ -170,10 +187,6 @@ a {
     text-decoration: none;
  }
 
- .contact {
-
- }
-
  .contact h3 {
     font-size: var(--fs-h2);
     text-align: center;
@@ -192,7 +205,7 @@ a {
  }
 
  .contact-form #message {
-    padding: 50px;
+    padding: 50px 0;
  }
 
  .social-logos {
