Fixed contact form, added divider

--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,7 @@ a {
 }
 
 .project-title {
+    display:flex;
     border: 3px solid var(--color-accent);
     max-width: 60%;
     margin: 40px 0;
@@ -171,7 +172,7 @@ a {
     -moz-border-radius: 15px;
     border-radius: 15px;
     color: #EEEEEE;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 100;
     margin: 20px 0;
     padding: 10px 20px;
@@ -196,10 +197,84 @@ a {
     text-decoration: none;
  }
 
- .contact h3 {
-    font-size: var(--fs-h2);
+ .divider {
+    margin-top: 80px;
+ }
+
+ .row{
+    width:100%;
+    height:20vh;
+    padding:0;
+    margin:0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position:relative;
+  }
+  
+  /* -- SVG CSS -- */
+  .svg-separator{
+    display: block;
+    background: 0 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 9;
+    -webkit-transform: translateY(-100%) translateY(2px);
+    transform: translateY(-100%) translateY(2px);
+    width: 100%;
+  }
+  .svg-separator.bottom{
+    top: auto;
+    bottom: 0;
+  }
+  .sep2 {
+    transform: translateY(-100%) translateY(2px) scale(1,1);
+    transform-origin: top;
+  }
+  .sep3 {
+    transform: translateY(-100%) translateY(2px) scale(1,1);
+    transform-origin: top;
+  }
+  .sep4 {
+    transform: translateY(-100%) translateY(2px) scale(1,1);
+    transform-origin: top;
+  }
+  
+  
+  /* -- Row BG Color -- */
+  
+  .green{background-color:#03a678;}
+  .green2{background-color:#1bbc9b;}
+  .red{background-color:#d24d57;}
+  .light-grey{background-color:#ecf0f1;}
+  .light-grey2{background-color:#ecf0f1;}
+  .dark-blue{background-color:#22313f;}
+  .grey-blue{background-color:#6c7a89;}
+  .black{background-color:#333;}
+  .stupid-blue{background-color:#19b5fe;}
+  
+
+ .contact {
+    display: flex; 
+    justify-content: center;
+    background-color: var(--color-dark)
+
+ }
+
+ .contact-section {
+     background-color: #FFF;
+ }
+
+ .contact-title {
+    font-size: var(--fs-h3);
     text-align: center;
     letter-spacing: 2px;
+    border: 3px solid var(--color-accent);
+    color: var(--color-light);
+    margin: 10px 0;
+    padding: 0 50px;
  }
 
  .contact-form input {
@@ -211,10 +286,46 @@ a {
  .contact-form {
     text-align: center;
     color: #EEEEEE;
+    background-color: var(--color-dark);
  }
 
- .contact-form #message {
-    padding: 50px 0;
+ #message {
+    width: 60%;
+    height: 60%;
+    padding: 10px;
+    margin: 10px;
+ }
+
+ .submit-btn,
+ .reset-btn {
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    color: #EEEEEE;
+    font-size: 18px;
+    font-weight: 100;
+    margin: 10px 5px;
+    padding: 10px 20px;
+    background-color: #393E46;
+    -webkit-box-shadow: 1px 1px 20px 0 #000000;
+    -moz-box-shadow: 1px 1px 20px 0 #000000;
+    box-shadow: 1px 1px 20px 0 #000000;
+    text-shadow: 1px 1px 20px #000000;
+    border: solid #4ECCA3 2px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+ }
+
+ .submit-btn:hover,
+ .reset-btn:hover {
+    background: #4ECCA3;
+    border: solid #393E46 2px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    text-decoration: none;
  }
 
  .social-logos {
@@ -232,5 +343,3 @@ a {
     text-align: center;
     color: var(--color-light);
  }
-
-
