--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,10 @@ a {
     color: var(--color-middle);
 }
 
+ul {
+    list-style-type: none;
+}
+
 /* -- */
 
 .nav {
@@ -197,65 +201,6 @@ a {
     text-decoration: none;
  }
 
- .divider {
-    margin-top: 80px;
- }
-
- .row{
-    width:100%;
-    height:20vh;
-    padding:0;
-    margin:0;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    position:relative;
-  }
-  
-  /* -- SVG CSS -- */
-  .svg-separator{
-    display: block;
-    background: 0 0;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    z-index: 9;
-    -webkit-transform: translateY(-100%) translateY(2px);
-    transform: translateY(-100%) translateY(2px);
-    width: 100%;
-  }
-  .svg-separator.bottom{
-    top: auto;
-    bottom: 0;
-  }
-  .sep2 {
-    transform: translateY(-100%) translateY(2px) scale(1,1);
-    transform-origin: top;
-  }
-  .sep3 {
-    transform: translateY(-100%) translateY(2px) scale(1,1);
-    transform-origin: top;
-  }
-  .sep4 {
-    transform: translateY(-100%) translateY(2px) scale(1,1);
-    transform-origin: top;
-  }
-  
-  
-  /* -- Row BG Color -- */
-  
-  .green{background-color:#03a678;}
-  .green2{background-color:#1bbc9b;}
-  .red{background-color:#d24d57;}
-  .light-grey{background-color:#ecf0f1;}
-  .light-grey2{background-color:#ecf0f1;}
-  .dark-blue{background-color:#22313f;}
-  .grey-blue{background-color:#6c7a89;}
-  .black{background-color:#333;}
-  .stupid-blue{background-color:#19b5fe;}
-  
-
  .contact {
     display: flex; 
     justify-content: center;
@@ -273,7 +218,7 @@ a {
     letter-spacing: 2px;
     border: 3px solid var(--color-accent);
     color: var(--color-light);
-    margin: 10px 0;
+    margin: 40px 0;
     padding: 0 50px;
  }
 
@@ -326,6 +271,7 @@ a {
     -moz-border-radius: 15px;
     border-radius: 15px;
     text-decoration: none;
+    margin-bottom: 30px;
  }
 
  .social-logos {
@@ -337,6 +283,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0;
  }
 
  footer p {
