--- a/css/main.css
+++ b/css/main.css
@@ -326,3 +326,50 @@ ul {
     line-height: 22px;
 }
 
+@media all and (max-width: 768px) {
+    .nav {
+        display: flex;
+        flex-direction: column;
+        padding: 20px 20px 20px 0;
+    }
+
+    .about {
+        padding: 0;
+    }
+    
+    .aboutme-bubble {
+        text-align: center;
+        margin: 0;
+        padding: 5px;
+        width: 90%;
+    }
+
+    .aboutme-bubble p {
+        padding: 0 10px;
+    }
+
+    .about-img {
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
+
+    .project-title {
+        max-width: 90%;
+    }
+
+    .projects {
+        display: grid; 
+        grid-template-columns: 1fr; 
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr; 
+        gap: 10px 0px; 
+        grid-template-areas: 
+            "."
+            "."
+            "."
+            "."
+            "."
+            "."; 
+    }
+}
